--- a/main.css
+++ b/main.css
@@ -1,16 +1,16 @@
-* {
-  background-color: aliceblue;
-  color: black;
-}
 
-div {
-  display: flex;
-  font-size: 2rem;
-  justify-content: center;
-  width: 100%;
-}
+    /* Ensure the iframe takes up the entire screen */
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
 
-marquee {
-  color: green;
-  font-size: 5rem;
-}
+    iframe {
+      border: none;
+      width: 100%;
+      height: 100%;
+    }
+  
